Add beginning of kiva_sort.js jQuery plugin.
All it does now is fetch the list of Kiva partners in JSON format.

--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
 
         <!-- Add your site or application content here -->
         <h1>Kiva Sort</h1>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div id='kiva_sort'></div>
+
+
+
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+        <script src="js/kiva_sort.js"></script>
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
