--- a/index.html
+++ b/index.html
@@ -24,27 +24,33 @@
 
         <!-- Add your site or application content here -->
         <h1>Kiva Sort</h1>
-        <div id='kiva_sort'></div>
-
-        <table id="kiva-sort-table">
-            <thead>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Portfolio Yield</th>
-                <th>Profitability</th>
-                <th>Status</th>
-                <th>Start Date</th>
-                <th>Rating</th>
-                <th>Due Diligence Type</th>
-                <th>Country</th>
-                <th>Delinquency Rate</th>
-                <th>Default Rate</th>
-                <th>Total Amount Raised</th>
-                <th>Loans Posted</th>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
+        <div id='kiva_sort'>
+            <table id="KivaSort">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Portfolio Yield</th>
+                        <th>Profitability</th>
+                        <th>Status</th>
+                        <th>Start Date</th>
+                        <th>Rating</th>
+                        <th>Due Diligence Type</th>
+                        <th>Country</th>
+                        <th>Delinquency Rate</th>
+                        <th>Default Rate</th>
+                        <th>Total Amount Raised</th>
+                        <th>Loans Posted</th>
+                        <th>average_loan_size_percent_per_capita_income</th>
+                        <th>Loans At Risk Rate</th>
+                        <th>currency_exchange_loss_rate</th>
+                        <th>URL</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
