Begin replacing DynaTable with DataTables
DataTables (http://www.datatables.net/) is more flexible and seems to
be faster. As of this checkin, only the barest DataTables functionality
is implemented: an ugly but sortable table displaying the raw Kiva data
fetched via JSON.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="js/vendor/jquery-dynatable/jquery.dynatable.css">
+        <link rel="stylesheet" href="js/vendor/DataTables/media/css/jquery.dataTables.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -53,11 +53,10 @@
         </div>
 
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/kiva_sort.js"></script>
-        <script src="js/vendor/jquery-dynatable/jquery.dynatable.js"></script>
-        <script src="js/main.js"></script>
+        <script type="text/javascript" charset="utf8" src="js/vendor/jquery-1.11.1.min.js"></script>
+        <script type="text/javascript" charset="utf8" src="js/vendor/DataTables/media/js/jquery.dataTables.js"></script>
+        <script type="text/javascript" charset="utf8" src="js/kiva_sort.js"></script>
+        <script type="text/javascript" charset="utf8" src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
