Use nice column name for average_loan_size.. column

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <th>Default Rate</th>
                         <th>Total Amount Raised</th>
                         <th>Loans Posted</th>
-                        <th>average_loan_size_percent_per_capita_income</th>
+                        <th>Average Loan Size Percent Per Capita Income</th>
                         <th>Loans At Risk Rate</th>
                         <th>currency_exchange_loss_rate</th>
                         <th>URL</th>
