Capitalize 'Currency Exchange Loss Rate' column

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <th>Loans Posted</th>
                         <th>Average Loan Size Percent Per Capita Income</th>
                         <th>Loans At Risk Rate</th>
-                        <th>currency_exchange_loss_rate</th>
+                        <th>Currency Exchange Loss Rate</th>
                         <th>URL</th>
                     </tr>
                 </thead>
