Add second table to index for testing

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Add your site or application content here -->
         <h1>Kiva Sort</h1>
         <div id='kiva_sort'>
-            <table id="KivaSort">
+            <table class="KivaSort">
                 <thead>
                     <tr>
                         <th>ID</th>
@@ -45,6 +45,20 @@
                         <th>Loans At Risk Rate</th>
                         <th>Currency Exchange Loss Rate</th>
                         <th>URL</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+
+            <table class="KivaSort">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Portfolio Yield</th>
+                        <th>Profitability</th>
+                        <th>Status</th>
                     </tr>
                 </thead>
                 <tbody>
