Optionally use data-title attribute for column titles
If a TH element has a data-title attribute, then use that for the
column name when referencing the JSON data. This allows tables to have
arbitrary column titles.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <tr>
                         <th>ID</th>
                         <th>Name</th>
-                        <th>Portfolio Yield</th>
+                        <th data-title="portfolio yield">Portfolio Yield (interest)</th>
                         <th>Profitability</th>
                         <th>Status</th>
                     </tr>
