--- a/index.html
+++ b/index.html
@@ -23,54 +23,60 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <h1>Kiva Sort</h1>
-        <div id='kiva_sort'>
-            <table class="KivaSort">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Portfolio Yield</th>
-                        <th>Profitability</th>
-                        <th>Status</th>
-                        <th>Start Date</th>
-                        <th>Rating</th>
-                        <th>Due Diligence Type</th>
-                        <th>Country</th>
-                        <th>Delinquency Rate</th>
-                        <th>Default Rate</th>
-                        <th>Total Amount Raised</th>
-                        <th>Loans Posted</th>
-                        <th>Average Loan Size Percent Per Capita Income</th>
-                        <th>Loans At Risk Rate</th>
-                        <th>Currency Exchange Loss Rate</th>
-                        <th>URL</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
+        <h1>KivaSort - A JQuery Plugin</h1>
+        <p>KivaSort is a simple JQuery plugin which uses the <a href='http://build.kiva.org/'>Kiva API</a> to get information on all of the Kiva field partners, and then uses the <a href='http://www.datatables.net/'>DataTables JQuery Plugin</a> to wrap the data in a dynamic sortable and filterable table.
 
-            <table class="KivaSort">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th data-title="portfolio yield">Portfolio Yield (interest)</th>
-                        <th>Profitability</th>
-                        <th>Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </div>
+        <p>For installation and usage instructions, see the <a href='https://github.com/cristoper/jquery-KivaSort/blob/master/README.md'>README file</a>. This page provides several example tables using the <a href='http://jsbin.com/'>JS Bin</a> service so that you can play around with the HTML and JavaScript.
 
+        <h2>Simple Table</h2>
 
-        <script type="text/javascript" charset="utf8" src="js/vendor/jquery-1.11.1.min.js"></script>
-        <script type="text/javascript" charset="utf8" src="js/vendor/DataTables/media/js/jquery.dataTables.js"></script>
-        <script type="text/javascript" charset="utf8" src="js/kiva_sort.js"></script>
-        <script type="text/javascript" charset="utf8" src="js/main.js"></script>
+        <p>A basic six-column table:
+        
+        <a class="jsbin-embed" href="http://jsbin.com/vujoje/2/embed?html,js,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
 
-        </body>
-        </html>
+        <h2>Arbitrary Column Names</h2>
+
+        <p>This example demonstrates how to use the <code>data-title</code> attribute on the table's <code>TH</code> elements to set the data for that column, allowing an arbitrary human-readable column title:
+
+        <a class="jsbin-embed" href="http://jsbin.com/lezov/1/embed?html,js,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
+
+        <h2>DataTables Options and API</h2>
+
+        <p>This example demonstrates how to pass options to DataTables (in this case, 'pageLength', 'scrollX', and 'order'). The order attribute causes the table's default sort order to be Portfolio Yield and then Profitability in descending order. It also uses the DataTables API (the 'columns() and search() functions) to filter out rows which don't have any Portfolio Yield or Profitability data. The effect is a small table which makes it easy to find the field partners with the highest interest rates.
+
+        <a class="jsbin-embed" href="http://jsbin.com/sesaxi/4/embed?html,js,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
+
+        <h2>Using Cached Data</h2>
+
+        <p>This example uses the <code>ks_partnerData</code> option to load local JSON (a portion of the data fetched from the Kiva API earlier) to populate the table. No AJAX call is made.
+
+        <a class="jsbin-embed" href="http://jsbin.com/bihida/1/embed?html,js,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
+
+        <h2>All Columns</h2>
+
+        <p>The following columns are available or use in your KivaSort table:
+
+        <ul>
+            <li>Average Loan Size Percent Per Capita Income</li>
+            <li>Country</li>
+            <li>Currency Exchange Loss Rate</li>
+            <li>Default Rate</li>
+            <li>Delinquency Rate</li>
+            <li>Due Diligence Type</li>
+            <li>ID</li>
+            <li>Loans At Risk Rate</li>
+            <li>Loans Posted</li>
+            <li>Name</li>
+            <li>Portfolio Yield</li>
+            <li>Profitability</li>
+            <li>Rating</li>
+            <li>Start Date</li>
+            <li>Status</li>
+            <li>Total Amount Raised</li>
+            <li>URL</li>
+        </ul>
+
+        <a class="jsbin-embed" href="http://jsbin.com/bewozi/1/embed?html,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
+
+      </body>
+</html>
