--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="js/vendor/DataTables/media/css/jquery.dataTables.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
+        <style type="text/css">
+            body { padding: 1em;}
+            iframe { margin-top: 1em; }
+        </style>
     </head>
     <body>
         <!--[if lt IE 7]>
