--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 
         <!-- Add your site or application content here -->
         <h1>KivaSort - A JQuery Plugin</h1>
-        <p>KivaSort is a simple JQuery plugin which uses the <a href='http://build.kiva.org/'>Kiva API</a> to get information on all of the Kiva field partners, and then uses the <a href='http://www.datatables.net/'>DataTables JQuery Plugin</a> to wrap the data in a dynamic sortable and filterable table.
+        <p><a href='https://github.com/cristoper/jquery-KivaSort'>KivaSort</a> is a simple JQuery plugin which uses the <a href='http://build.kiva.org/'>Kiva API</a> to get information on all of the Kiva field partners, and then uses the <a href='http://www.datatables.net/'>DataTables JQuery Plugin</a> to wrap the data in a dynamic sortable and filterable table.
 
-        <p>For installation and usage instructions, see the <a href='https://github.com/cristoper/jquery-KivaSort/blob/master/README.md'>README file</a>. This page provides several example tables using the <a href='http://jsbin.com/'>JS Bin</a> service so that you can play around with the HTML and JavaScript.
+        <p>For installation and usage instructions, see the <a href='https://github.com/cristoper/jquery-KivaSort/blob/master/README.md'>README file</a>. For source code, see the plugin's <a href='https://github.com/cristoper/jquery-KivaSort'>Github page</a>.
+        
+        <p>This page provides several example tables using the <a href='http://jsbin.com/'>JS Bin</a> service so that you can play around with the HTML and JavaScript.
 
         <h2>Simple Table</h2>
 
