Clarify page title

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <h1>KivaSort - A JQuery Plugin</h1>
+        <h1>KivaSort (JQuery Plugin) Examples</h1>
         <p><a href='https://github.com/cristoper/jquery-KivaSort'>KivaSort</a> is a simple JQuery plugin which uses the <a href='http://build.kiva.org/'>Kiva API</a> to get information on all of the Kiva field partners, and then uses the <a href='http://www.datatables.net/'>DataTables JQuery Plugin</a> to wrap the data in a dynamic sortable and filterable table.
 
         <p>For installation and usage instructions, see the <a href='https://github.com/cristoper/jquery-KivaSort/blob/master/README.md'>README file</a>. For source code, see the plugin's <a href='https://github.com/cristoper/jquery-KivaSort'>Github page</a>.
