Link to KivaSort.org

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         
         <p>This page provides several example tables using the <a href='http://jsbin.com/'>JS Bin</a> service so that you can play around with the HTML and JavaScript.
 
+        <p>For a deployed example of KivaSort, see <a href='http://www.kivasort.org/'>KivaSort.org</a>.
+
         <h2>Simple Table</h2>
 
         <p>A basic six-column table:
