Always embed most recent jsbin revision

--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
 
         <p>A basic six-column table:
         
-        <a class="jsbin-embed" href="http://jsbin.com/vujoje/2/embed?html,js,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
+        <a class="jsbin-embed" href="http://jsbin.com/vujoje/embed?html,js,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
 
         <h2>Arbitrary Column Names</h2>
 
         <p>This example demonstrates how to use the <code>data-title</code> attribute on the table's <code>TH</code> elements to set the data for that column, allowing an arbitrary human-readable column title:
 
-        <a class="jsbin-embed" href="http://jsbin.com/lezov/1/embed?html,js,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
+        <a class="jsbin-embed" href="http://jsbin.com/lezov/embed?html,js,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
 
         <h2>DataTables Options and API</h2>
 
         <p>This example demonstrates how to pass options to DataTables (in this case, 'pageLength', 'scrollX', and 'order'). The order attribute causes the table's default sort order to be Portfolio Yield and then Profitability in descending order. It also uses the DataTables API (the 'columns() and search() functions) to filter out rows which don't have any Portfolio Yield or Profitability data. The effect is a small table which makes it easy to find the field partners with the highest interest rates.
 
-        <a class="jsbin-embed" href="http://jsbin.com/sesaxi/4/embed?html,js,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
+        <a class="jsbin-embed" href="http://jsbin.com/sesaxi/embed?html,js,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
 
         <h2>Using Cached Data</h2>
 
         <p>This example uses the <code>ks_partnerData</code> option to load local JSON (a portion of the data fetched from the Kiva API earlier) to populate the table. No AJAX call is made.
 
-        <a class="jsbin-embed" href="http://jsbin.com/bihida/1/embed?html,js,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
+        <a class="jsbin-embed" href="http://jsbin.com/bihida/embed?html,js,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
 
         <h2>All Columns</h2>
 
@@ -84,7 +84,7 @@
             <li>URL</li>
         </ul>
 
-        <a class="jsbin-embed" href="http://jsbin.com/bewozi/1/embed?html,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
+        <a class="jsbin-embed" href="http://jsbin.com/bewozi/embed?html,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
 
       </body>
 </html>
