Fix arbitrary column title example
Apparently setting 'data-title' attribute of th elements hasn't worked
since datatables 1.10.4

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <h2>Arbitrary Column Names</h2>
 
-        <p>This example demonstrates how to use the <code>data-title</code> attribute on the table's <code>TH</code> elements to set the data for that column, allowing an arbitrary human-readable column title:</p>
+        <p>This example demonstrates how to use the <code><a href='https://datatables.net/reference/option/columns'>columns</a></code> option to set arbitrary column titles:</p>
 
         <a class="jsbin-embed" href="http://jsbin.com/lezov/embed?html,js,output">Kiva Sort</a>
 
