--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
         
         <a class="jsbin-embed" href="http://jsbin.com/vujoje/embed?html,js,output">Kiva Sort</a>
 
+        <h2>DataTables Options and API</h2>
+
+        <p>This example demonstrates how to pass options to DataTables (in this case, 'pageLength', 'scrollX', and 'order'). The order attribute causes the table's default sort order to be Portfolio Yield and then Profitability in descending order. It also uses the DataTables API (the columns() and search() functions) to filter out rows which don't have any Portfolio Yield or Profitability data. The effect is a small table which makes it easy to find the field partners with the highest interest rates.</p>
+
+        <a class="jsbin-embed" href="http://jsbin.com/sesaxi/embed?html,js,output">Kiva Sort</a>
+
         <h2>Arbitrary Column Names</h2>
 
         <p>This example demonstrates how to use the <code><a href='https://datatables.net/reference/option/columns'>columns</a></code> option to set arbitrary column titles:</p>
 
         <a class="jsbin-embed" href="http://jsbin.com/lezov/embed?html,js,output">Kiva Sort</a>
-
-        <h2>DataTables Options and API</h2>
-
-        <p>This example demonstrates how to pass options to DataTables (in this case, 'pageLength', 'scrollX', and 'order'). The order attribute causes the table's default sort order to be Portfolio Yield and then Profitability in descending order. It also uses the DataTables API (the 'columns() and search() functions) to filter out rows which don't have any Portfolio Yield or Profitability data. The effect is a small table which makes it easy to find the field partners with the highest interest rates.</p>
-
-        <a class="jsbin-embed" href="http://jsbin.com/sesaxi/embed?html,js,output">Kiva Sort</a>
 
         <h2>Using Cached Data</h2>
 
