--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
         <p>This example uses the <code>ks_partnerData</code> option to load local JSON (a portion of the data fetched from the Kiva API earlier) to populate the table. No AJAX call is made.</p>
 
+        <p>It also shows how to use <a href='https://datatables.net/extensions/buttons/'> the Datatables Buttons extension</a> to display the two custom buttons provided by jquery-kivasort ("JSON" and "Reload").</p>
+
         <a class="jsbin-embed" href="http://jsbin.com/bihida/embed?html,js,output">Kiva Sort</a>
 
         <h2>All Columns</h2>
