Change kivasort.org to kivasort.americancynic.net

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
         <p>This page provides several example tables using the <a href='http://jsbin.com/'>JS Bin</a> service so that you can play around with the HTML and JavaScript.
 
-        <p>For a deployed example of KivaSort, see <a href='http://www.kivasort.org/'>KivaSort.org</a>.
+        <p>For a deployed example of KivaSort, see <a href='https://kivasort.americancynic.net/'>KivaSort.americancynic.net</a>.
 
         <h2>Simple Table</h2>
 
