Switch examples from jsbin to jsfiddle
jsbin stopped allowing embedded bins on ssl-enabled pages.

--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
         <h2>Simple Table</h2>
 
         <p>A basic six-column table:</p>
-        
-        <a class="jsbin-embed" href="http://jsbin.com/vujoje/embed?html,js,output">Kiva Sort</a>
+
+        <iframe width="100%" height="300" src="//jsfiddle.net/cristoper/mxc1r3qo/embedded/result,js,html/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 
         <h2>DataTables Options and API</h2>
 
         <p>This example demonstrates how to pass options to DataTables (in this case, 'pageLength', 'scrollX', and 'order'). The order attribute causes the table's default sort order to be Portfolio Yield and then Profitability in descending order. It also uses the DataTables API (the columns() and search() functions) to filter out rows which don't have any Portfolio Yield or Profitability data. The effect is a small table which makes it easy to find the field partners with the highest interest rates.</p>
 
-        <a class="jsbin-embed" href="http://jsbin.com/sesaxi/embed?html,js,output">Kiva Sort</a>
+        <iframe width="100%" height="300" src="//jsfiddle.net/cristoper/5u8jk6p0/embedded/result,js,html/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 
         <h2>Arbitrary Column Names</h2>
 
         <p>This example demonstrates how to use the <code><a href='https://datatables.net/reference/option/columns'>columns</a></code> option to set arbitrary column titles:</p>
 
-        <a class="jsbin-embed" href="http://jsbin.com/lezov/embed?html,js,output">Kiva Sort</a>
+        <iframe width="100%" height="300" src="//jsfiddle.net/cristoper/dbLcxwz3/embedded/result,js,html/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 
         <h2>Using Cached Data</h2>
 
@@ -60,7 +60,7 @@
 
         <p>It also shows how to use <a href='https://datatables.net/extensions/buttons/'> the Datatables Buttons extension</a> to display the two custom buttons provided by jquery-kivasort ("JSON" and "Reload").</p>
 
-        <a class="jsbin-embed" href="http://jsbin.com/bihida/embed?html,js,output">Kiva Sort</a>
+        <iframe width="100%" height="300" src="//jsfiddle.net/cristoper/a36rqx9h/embedded/result,js,html/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 
         <h2>All Columns</h2>
 
@@ -85,7 +85,7 @@
             <li>URL</li>
         </ul>
 
-        <a class="jsbin-embed" href="http://jsbin.com/bewozi/embed?html,output">Kiva Sort</a><script src="http://static.jsbin.com/js/embed.js"></script>
+        <iframe width="100%" height="300" src="//jsfiddle.net/cristoper/syz7vapq/embedded/result,js,html/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 
       </body>
 </html>
